--- a/glade/dialogs.glade
+++ b/glade/dialogs.glade
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
-<!--Generated with glade3 3.4.5 on Sat Sep 13 13:45:11 2008 -->
+<!--Generated with glade3 3.4.5 on Sun Sep 14 17:28:40 2008 -->
 <glade-interface>
   <widget class="GtkDialog" id="serverDialog">
     <property name="border_width">6</property>
@@ -953,7 +953,7 @@ Are you sure you want to delete the server?</property>
   </widget>
   <widget class="GtkAboutDialog" id="aboutDialog">
     <property name="border_width">5</property>
-    <property name="title" translatable="yes">About tekka</property>
+    <property name="title">About tekka</property>
     <property name="resizable">False</property>
     <property name="window_position">GTK_WIN_POS_CENTER_ON_PARENT</property>
     <property name="icon">../graphics/icon.svg</property>
@@ -994,9 +994,7 @@ SUCH DAMAGE.</property>
 Marian Tietz</property>
     <property name="documenters">Michael Kuhn
 Marian Tietz</property>
-    <property name="translator_credits">Felipe Besoain (es)
-Alexandre Sapata Carbonell (pt_BR)
-Michael Kuhn (de)</property>
+    <property name="translator_credits" translatable="yes">translator-credits</property>
     <property name="artists">Eva Leibovitz
 Marian Tietz</property>
     <property name="logo">../graphics/icon.svg</property>
