--- a/glade/mainwindow.glade
+++ b/glade/mainwindow.glade
@@ -162,6 +162,7 @@
                         <property name="label" translatable="yes">gtk-preferences</property>
                         <property name="use_underline">True</property>
                         <property name="use_stock">True</property>
+                        <signal name="activate" handler="menu_Dialogs_preferences_activate_cb"/>
                       </widget>
                     </child>
                   </widget>
