--- a/glade/dialogs/serverAdd.glade
+++ b/glade/dialogs/serverAdd.glade
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <!DOCTYPE glade-interface SYSTEM "glade-2.0.dtd">
+<!--Generated with glade3 3.4.5 on Tue Dec  9 13:36:19 2008 -->
 <glade-interface>
   <widget class="GtkDialog" id="serverAdd">
     <property name="border_width">6</property>
@@ -9,6 +10,8 @@
     <property name="has_separator">False</property>
     <child internal-child="vbox">
       <widget class="GtkVBox" id="dialog-vbox3">
+        <property name="width_request">350</property>
+        <property name="height_request">450</property>
         <property name="visible">True</property>
         <property name="spacing">12</property>
         <child>
@@ -210,6 +213,41 @@
           </widget>
           <packing>
             <property name="position">1</property>
+          </packing>
+        </child>
+        <child>
+          <widget class="GtkFrame" id="frame1">
+            <property name="visible">True</property>
+            <property name="label_xalign">0</property>
+            <property name="shadow_type">GTK_SHADOW_NONE</property>
+            <child>
+              <widget class="GtkTable" id="table1">
+                <property name="visible">True</property>
+                <property name="border_width">6</property>
+                <child>
+                  <widget class="Custom" id="commandList">
+                    <property name="visible">True</property>
+                    <property name="creation_function">createCommandList</property>
+                  </widget>
+                  <packing>
+                    <property name="x_padding">2</property>
+                  </packing>
+                </child>
+              </widget>
+            </child>
+            <child>
+              <widget class="GtkLabel" id="label1">
+                <property name="visible">True</property>
+                <property name="label" translatable="yes">&lt;b&gt;Command List&lt;/b&gt;</property>
+                <property name="use_markup">True</property>
+              </widget>
+              <packing>
+                <property name="type">label_item</property>
+              </packing>
+            </child>
+          </widget>
+          <packing>
+            <property name="position">2</property>
           </packing>
         </child>
         <child internal-child="action_area">
